--- a/src/app/components/profile-panel/profile-panel.component.html
+++ b/src/app/components/profile-panel/profile-panel.component.html
@@ -1,4 +1,6 @@
-<div class="profile-con flex align-start">
+<div class="profile-con flex align-start justify-center">
   <app-navigation></app-navigation>
-  <router-outlet></router-outlet>
+  <div >
+    <router-outlet></router-outlet>
+  </div>
 </div>
