--- a/src/app/components/profile-panel/activities/advertisements/advertisements.component.html
+++ b/src/app/components/profile-panel/activities/advertisements/advertisements.component.html
@@ -1,13 +1,20 @@
-<mat-tab-group>
-  <mat-tab label="I give lessons" >
-    <div class="flex-col content-con">
-      <h1>I give lessons</h1>
-      <p class="alert alert-warning">No advertisements yet</p>
-      <button class="second-btn" style="align-self: flex-end" routerLink="/profile/create-advertisement-tutor">Add advertisement</button>
-    </div>
-  </mat-tab>
-  <mat-tab label="I'm looking for a teacher">
+<div class="con">
+  <mat-tab-group>
+    <mat-tab label="I give lessons" >
+      <div class="flex-col content-con">
+        <h1>I give lessons</h1>
+        <p class="alert alert-warning">No advertisements yet</p>
+        <button class="second-btn" style="align-self: flex-end" routerLink="/profile/create-advertisement-tutor" [queryParams]="{tutorLooking : false}">Add advertisement</button>
+      </div>
+    </mat-tab>
+    <mat-tab label="I'm looking for a teacher">
+      <div class="flex-col content-con">
+        <h1>I'm looking for a tutor</h1>
+        <p class="alert alert-warning">No advertisements yet</p>
+        <button class="second-btn" style="align-self: flex-end" routerLink="/profile/create-advertisement-tutor" [queryParams]="{tutorLooking : true}">Add advertisement</button>
+      </div>
+    </mat-tab>
 
-  </mat-tab>
+  </mat-tab-group>
 
-</mat-tab-group>
+</div>
