--- a/src/app/components/profile-panel/activities/dashboard/dashboard.component.html
+++ b/src/app/components/profile-panel/activities/dashboard/dashboard.component.html
@@ -1,1 +1,35 @@
-<p>dashboard works!</p>
+<div class="grid-con">
+  <div class="user-panel panel flex-col align-start">
+    <h4>User panel</h4>
+    <div class="flex align-center" style="gap: 2.4rem">
+      <div class="flex-col align-center" style="gap: 0.6rem">
+        <img class="user-img" src="../../../../../assets/images/avatar.png"/>
+        <p class="user-username">Jakub Matras</p>
+      </div>
+
+      <div class="flex-col align-center">
+        <circle-progress
+          [percent]="85"
+          [radius]="100"
+          [outerStrokeWidth]="16"
+          [innerStrokeWidth]="8"
+          [outerStrokeColor]="'#78C000'"
+          [innerStrokeColor]="'#C7E596'"
+          [animation]="true"
+          [animationDuration]="300"
+          subtitle="Completing the profile"
+        ></circle-progress>
+        <button class="second-btn" routerLink="/profile/complete">Complete your profile</button>
+      </div>
+
+    </div>
+  </div>
+  <div class="notifications-panel panel">
+    <h4>Notifications</h4>
+    <p class="alert alert-warning">No adds yet.</p>
+  </div>
+  <div class="adds-list-panel panel">
+    <h4>Advertisement's list</h4>
+      <p class="alert alert-warning">No adds yet.</p>
+  </div>
+</div>
