Created profile images functionality

--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,8 +1,14 @@
-<div class="home-con">
+<div class="home-con flex-col align-center">
   <h1>Subjects and cities</h1>
   <div class="flex">
     <div class="grid-con">
-
+      <div class="subject-con flex align-center space-between">
+        <div class="flex align-center" style="gap: 0.6rem">
+          <mat-icon>school</mat-icon>
+          <p>biologia</p>
+        </div>
+        <span>(132)</span>
+      </div>
     </div>
   </div>
 </div>
