--- a/src/app/components/profile-panel/activities/advertisements/advertisements.component.html
+++ b/src/app/components/profile-panel/activities/advertisements/advertisements.component.html
@@ -1,6 +1,6 @@
 <div class="con">
-  <mat-tab-group>
-    <mat-tab label="I give lessons" >
+  <mat-tab-group >
+    <mat-tab label="I give lessons" style="width: 50%;" >
       <div class="flex-col content-con">
         <h1>I give lessons</h1>
         <p class="alert alert-warning">No advertisements yet</p>
