--- a/src/app/components/profile-panel/activities/dashboard/dashboard.component.html
+++ b/src/app/components/profile-panel/activities/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
 
       <div class="flex-col align-center">
         <circle-progress
-          [percent]="85"
+          [percent]="completionPercent"
           [radius]="100"
           [outerStrokeWidth]="16"
           [innerStrokeWidth]="8"
