--- a/src/app/components/home-page/home-page.component.css
+++ b/src/app/components/home-page/home-page.component.css
@@ -11,6 +11,34 @@ p {
   min-width: 10rem;
 }
 
-.grid-con {
-  grid-template-columns: repeat(2, 1fr);
+.subject-con mat-icon {
+  color: #999999;
 }
+
+.subject-name {
+  color: #384047;
+  font-size: 1.2rem;
+  font-weight: 300;
+
+}
+
+.grid-con {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 3.4rem;
+  row-gap: 0.8rem;
+}
+
+.see-info {
+  grid-column: 1 / 3;
+  justify-self: flex-start;
+  color: #2AC59B;
+  margin-top: 1.4rem;
+  font-size: 1.2rem;
+}
+
+.main-con {
+  gap: 3.8rem;
+}
+
+
