--- a/src/app/components/profile-panel/activities/dashboard/dashboard.component.css
+++ b/src/app/components/profile-panel/activities/dashboard/dashboard.component.css
@@ -26,11 +26,18 @@ h4 {
 }
 
 .user-username {
-  font-size: 1.4rem;
+  font-size: 1.8rem;
   font-weight: 300;
 }
 
 .panel {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   padding: 1.2rem 2.4rem;
+}
+
+.user-img {
+  width: 20rem;
+  height: 20rem;
+  border-radius: 50%;
+  margin-bottom: 1.2rem;
 }
