--- a/src/app/components/profile-panel/activities/dashboard/dashboard.component.html
+++ b/src/app/components/profile-panel/activities/dashboard/dashboard.component.html
@@ -3,7 +3,8 @@
     <h4>User panel</h4>
     <div class="flex align-center" style="gap: 2.4rem">
       <div class="flex-col align-center" style="gap: 0.6rem">
-        <img class="user-img" src="../../../../../assets/images/avatar.png"/>
+        <img class="user-img" [src]="currentUser?.profileImagePath ? sanitizerPhoto(currentUser?.profileImagePath)
+             : 'assets/images/default_avatar.png'"/>
         <p class="user-username">Jakub Matras</p>
       </div>
 
