--- a/src/app/components/home-page/home-page.component.css
+++ b/src/app/components/home-page/home-page.component.css
@@ -17,7 +17,7 @@ p {
 
 .subject-name {
   color: #384047;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 300;
 
 }
@@ -25,8 +25,9 @@ p {
 .grid-con {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  column-gap: 3.4rem;
+  column-gap: 1.8rem;
   row-gap: 0.8rem;
+  width: 35rem;
 }
 
 .see-info {
@@ -37,8 +38,53 @@ p {
   font-size: 1.2rem;
 }
 
+h1 {
+  font-weight: 300;
+  font-size: 1.8rem;
+}
 .main-con {
   gap: 3.8rem;
 }
 
+.loader,
+.loader:after {
+  border-radius: 50%;
+  width: 10em;
+  height: 10em;
+}
+.loader {
+  margin: 60px auto;
+  font-size: 10px;
+  position: relative;
+  text-indent: -9999em;
+  border-top: 1.1em solid rgba(121,99,99, 0.2);
+  border-right: 1.1em solid rgba(121,99,99, 0.2);
+  border-bottom: 1.1em solid rgba(121,99,99, 0.2);
+  border-left: 1.1em solid #2AC59B;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
+}
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
 
