--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -54,13 +54,15 @@ h1 {
 }
 
 .form-con {
-  /*background-color: #fff;*/
-  /*padding: 2rem;*/
-  width: 100%;
+  background-color: #fff;
+  padding: 0.6rem 1.2rem;
+  max-width: 50rem;
+  min-width: 40rem;
+  border-radius: 2rem;
 }
 
 mat-icon {
-  transform: scale(2);
+  transform: scale(2) translateY(-10%);
 }
 .profile-icon {
   transform: scale(1.2);
@@ -92,6 +94,7 @@ mat-icon {
 .profile-img {
   width: 4rem;
   border-radius: 50%;
+  height: 4rem;
 }
 
 p {
