--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -67,7 +67,7 @@
 
       <mat-form-field appearance="fill">
         <mat-label>Add category</mat-label>
-        <mat-select  [(value)]="selectedCategory" (selectionChange)="onCategorySelecting()">
+        <mat-select  [(value)]="selectedCategory" >
           <mat-option value="tutor">Tutor's advertisements</mat-option>
           <mat-option value="student">Student's advertisements</mat-option>
           <mat-option value="all">All advertisements</mat-option>
